--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -51,4 +51,6 @@
     <color name="wheel_timebtn_pre">#CCCCCC</color>
 	<color name="color_ededed">#ededed</color>
 	<color name="color_cecfce">#cecfce</color>
+	<color name="color_8a8a8a">#8a8a8a</color>
+	
 </resources>
