--- a/res/drawable/main_menu_text_color.xml
+++ b/res/drawable/main_menu_text_color.xml
@@ -5,7 +5,7 @@
     <item android:color="@color/color_41BC6C" android:state_selected="true"/>
     <item android:color="@color/color_41BC6C" android:state_pressed="true"/>
     <!-- When not selected, use white -->
-    <item android:color="@color/black_overlay"/>
+    <item android:color="@color/color_8a8a8a"/>
 
 </selector>
 
