--- a/res/layout/child_status_item.xml
+++ b/res/layout/child_status_item.xml
@@ -31,6 +31,7 @@
             android:orientation="vertical" >
 
             <RadioButton
+                android:id="@+id/date_week"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:button="@null"
