--- a/res/layout/medications.xml
+++ b/res/layout/medications.xml
@@ -97,7 +97,7 @@
             android:layout_weight="0" >
 
             <RadioButton
-                android:id="@+id/radioButton1"
+                android:id="@+id/lingchen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
@@ -111,7 +111,7 @@
                 android:textColor="@color/color_cecfce" />
 
             <RadioButton
-                android:id="@+id/radioButton2"
+                android:id="@+id/zaoshang"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -125,7 +125,7 @@
                 android:textColor="@color/color_cecfce" />
 
             <RadioButton
-                android:id="@+id/radioButton3"
+                android:id="@+id/wanshang"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
@@ -139,7 +139,7 @@
                 android:textColor="@color/color_cecfce" />
 
             <RadioButton
-                android:id="@+id/radioButton4"
+                android:id="@+id/zhongwu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
