--- a/res/layout/setting.xml
+++ b/res/layout/setting.xml
@@ -32,6 +32,7 @@
         android:layout_marginLeft="20dip"
         android:layout_marginTop="20dip"
         android:text="设置"
+        android:textSize="16sp"
         android:textColor="@color/color_41BC6C" />
 
     <LinearLayout
